[package]
name = "email"
version = "0.0.21"
authors = ["Nicholas Hollett <niax@niax.co.uk>"]
description = "Implementation of RFC 5322 email messages"
repository = "https://github.com/niax/rust-email"
documentation = "https://niax.github.io/rust-email/email/"
license = "MIT"
build = "build.rs"

[dependencies]
encoding = "0.2.33"
chrono = "0.4.9"
lazy_static = "1.4.0"
base64 = "0.11.0"
rand = "0.7.2"
time = "0.1.42"

[features]
nightly = []

[build-dependencies]
version_check = "0.9.1"
