[package]
name = "email"
version = "0.0.21"
authors = ["Nicholas Hollett <niax@niax.co.uk>"]
description = "Implementation of RFC 5322 email messages"
repository = "https://github.com/niax/rust-email"
license = "MIT"
edition = "2018"
build = "build.rs"

[dependencies]
encoding_rs = "0.8"
chrono = "0.4.9"
lazy_static = "1.4.0"
base64 = "0.12.0"
rand = "0.7.2"

[features]
nightly = []

[build-dependencies]
version_check = "0.9.1"
